# Heft

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
heft-core/: Cargo.toml
heft-core/examples/: bench.rs
heft-core/src/: lib.rs  scanner.rs  stats.rs  treemap.rs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Sidebar.tsx  Treemap.tsx
src/lib/: types.ts
