[package]
name = "heft"
version = "1.0.0"
edition = "2021"
description = "Heft - a fast disk space visualizer"
license = "MIT"

[lib]
name = "heft_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
heft-core = { path = "../heft-core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
